--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "marvel",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^16.17.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "node": "^19.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
